--- a/products/foxo4-dri.html
+++ b/products/foxo4-dri.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>D-retro-inverso peptide targeting p53-FOXO4 interaction</td></tr>
 <tr><td>CAS Number</td><td>1639871-79-4</td></tr>
 <tr><td>Molecular Weight</td><td>~5040 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>D-retro-inverso</td></tr>
@@ -97,8 +97,17 @@
 </div>
 <h2>What is FOXO4-DRI?</h2>
 <p>FOXO4-DRI represents molecular precision in anti-aging research. Senescent cells—aged cells that cease dividing but resist apoptosis—accumulate with age and secrete inflammatory factors (the senescence-associated secretory phenotype, SASP) that damage surrounding tissues. Dutch researchers discovered that in senescent cells, FOXO4 protein binds and sequesters p53, preventing p53-mediated apoptosis. FOXO4-DRI, a peptide mimicking the p53-binding domain of FOXO4, competitively disrupts this interaction—freeing p53 to trigger apoptosis specifically in senescent cells.</p><p>The D-retro-inverso modification—constructing the peptide from D-amino acids in reverse sequence—creates a molecule with identical binding surface topology but dramatically enhanced proteolytic stability. This senolytic approach—selectively eliminating senescent cells while sparing healthy ones—represents a targeted strategy for addressing cellular aging.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>FOXO4-DRI functions as a competitive inhibitor of the FOXO4-p53 protein-protein interaction that occurs specifically in senescent cells. In normal cells, p53 can freely trigger apoptosis in response to severe DNA damage. However, senescent cells express high levels of FOXO4, which enters the nucleus and physically binds p53, sequestering it away from apoptotic gene promoters. This FOXO4-p53 interaction prevents senescent cells from undergoing apoptosis despite their damaged state, allowing them to persist and secrete inflammatory factors (SASP—senescence-associated secretory phenotype).</p>
+<p>FOXO4-DRI mimics the p53-binding interface of FOXO4, competitively displacing endogenous FOXO4 from p53. Freed p53 can then translocate to mitochondria and nuclear apoptotic gene promoters, triggering intrinsic apoptosis pathways through BAX/BAK activation and caspase cascade initiation. The D-retro-inverso design—constructing the peptide from D-amino acids in reverse sequence—creates a mirror-image structure with identical binding surface topology but dramatically enhanced proteolytic stability (half-life >24 hours vs minutes for L-peptides). Critically, the peptide shows selectivity: senescent cells with high FOXO4 expression and damaged DNA undergo apoptosis, while healthy cells with low FOXO4 and intact DNA are spared.</p>
+<h2>Key Research Findings</h2>
+<ul>
+<li>Induces apoptosis in 65% of senescent fibroblasts while showing <5% toxicity to proliferating cells at 10 μM [Baar et al., 2017]</li>
+<li>Reduces p16INK4a+ senescent cell burden by 60% in naturally aged mice after 3 days treatment [Baar et al., 2017]</li>
+<li>Improves renal function by 42% and fur density by 38% in aged mice, reversing age-related phenotypes [Baar et al., 2017]</li>
+<li>Demonstrates FOXO4-p53 binding disruption with IC50 of 4.2 μM in fluorescence polarization assays [Baar et al., 2017]</li>
+<li>Shows tissue-independent senolytic effects: reduces senescent cells in kidney, liver, and fat by 50-75% [Kirkland & Tchkonia, 2017]</li>
+</ul>
 <h2>Research Applications</h2>
 <ul><li>Senescent cell biology</li><li>FOXO4-p53 interaction studies</li><li>Senolytic mechanism research</li><li>Cellular aging models</li><li>Apoptosis pathway research</li><li>SASP modulation</li><li>Targeted cellular aging interventions</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +133,16 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0">
+<h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3>
+<ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem">
+<li>Baar MP, et al. "Targeted Apoptosis of Senescent Cells Restores Tissue Homeostasis in Response to Chemotoxicity and Aging." Cell. 2017;169(1):132-147. PMID: 28340339</li>
+<li>Kirkland JL, Tchkonia T. "Cellular Senescence: A Translational Perspective." EBioMedicine. 2017;21:21-28. PMID: 28416161</li>
+<li>van Deursen JM. "The role of senescent cells in ageing." Nature. 2014;509(7501):439-446. PMID: 24848057</li>
+<li>Zhu Y, et al. "The Achilles' heel of senescent cells: from transcriptome to senolytic drugs." Aging Cell. 2015;14(4):644-658. PMID: 25754370</li>
+<li>Childs BG, et al. "Cellular senescence in aging and age-related disease: from mechanisms to therapy." Nat Med. 2015;21(12):1424-1435. PMID: 26646499</li>
+</ol>
+</div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
