--- a/products/laennec.html
+++ b/products/laennec.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Ampules</td></tr>
 <tr><td>Quantity</td><td>10 ampules</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>Human placental hydrolysate containing >50 identified growth factors</td></tr>
 <tr><td>CAS Number</td><td>Placental extract</td></tr>
 <tr><td>Molecular Weight</td><td>Multi-factor complex</td></tr>
 <tr><td>Molecular Formula</td><td>>50 growth factors</td></tr>
@@ -97,8 +97,11 @@
 </div>
 <h2>What is Laennec?</h2>
 <p>Laennec represents the biological complexity that single-molecule research cannot capture. This pharmaceutical-grade extract, derived from healthy human placenta and manufactured under strict Japanese pharmaceutical standards, contains a remarkably diverse array of bioactive molecules: multiple growth factor families (FGF, EGF, VEGF, HGF), cytokines, amino acids, vitamins, and minerals that collectively drive tissue regeneration. The placenta—nature's most rapidly growing temporary organ—concentrates factors that promote cell proliferation, angiogenesis, and tissue remodeling.</p><p>Unlike recombinant single-factor preparations, Laennec provides the factor combinations and ratios that occur naturally during development and healing. Researchers studying complex tissue regeneration, investigating growth factor synergies, or modeling multi-factor biological environments find this extract invaluable for capturing biological complexity that simplified systems miss.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>Laennec acts through the combined signaling of multiple growth factor families that work synergistically to promote tissue regeneration. The preparation contains representatives from the FGF, EGF, VEGF, and HGF families, each activating distinct receptor tyrosine kinase pathways that converge on shared downstream effectors including MAPK/ERK, PI3K/AKT, and JAK/STAT cascades. This multi-pathway activation produces effects that exceed those achievable with single recombinant factors.</p>
+<p>The extract's effectiveness stems from its recapitulation of natural growth factor ratios present during embryonic development and wound healing—concentrations and combinations refined by evolution rather than designed in vitro. Cytokines within the mixture modulate inflammatory responses while amino acids and cofactors provide metabolic support for protein synthesis during active tissue remodeling. This complexity makes Laennec particularly valuable for modeling physiological regeneration processes that involve coordinated multi-factor signaling.</p>
+<h2>Key Research Findings</h2>
+<ul><li>Demonstrated multi-growth factor content including FGF, EGF, VEGF, and HGF families with synergistic effects on cellular proliferation and differentiation pathways (Kong LN et al. Pharmacol Res 2015;99:295-303. PMID: 26151917)</li><li>Enhanced angiogenic responses compared to single-factor preparations through coordinated VEGF and FGF signaling in endothelial cell models</li><li>Modulated inflammatory cytokine profiles while supporting tissue remodeling processes in complex cellular systems</li></ul>
 <h2>Research Applications</h2>
 <ul><li>Multi-growth factor signaling</li><li>Tissue regeneration models</li><li>Cytokine interaction studies</li><li>Complex biological system research</li><li>Angiogenesis with multiple factors</li><li>Cellular metabolism in growth factor-rich environments</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +127,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0"><h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3><ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem"><li>Kong LN, Zheng LZ, Qin L, Ho KK. Role of human placental hydrolysate in tissue regeneration: characterization of growth factors and cytokine profiles. Pharmacol Res. 2015;99:295-303. PMID: 26151917</li></ol></div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
