--- a/products/lipo-c-plus.html
+++ b/products/lipo-c-plus.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10ml</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>Enhanced lipotropic blend (MIC + B-vitamins + amino acids)</td></tr>
 <tr><td>CAS Number</td><td>Enhanced blend</td></tr>
 <tr><td>Molecular Weight</td><td>Multi-component</td></tr>
 <tr><td>Molecular Formula</td><td>MIC + Amino acids</td></tr>
@@ -97,8 +97,11 @@
 </div>
 <h2>What is Lipo-C Plus?</h2>
 <p>Building upon the foundation of methionine, inositol, choline, and L-carnitine, the Lipo-C Plus formulation adds complementary factors that participate in energy production, mitochondrial function, and metabolic performance. This enhanced blend recognizes that optimal cellular metabolism requires not just lipid processing factors, but also amino acids for protein synthesis, cofactors for enzymatic reactions, and compounds that support mitochondrial efficiency.</p><p>The formulation enables researchers to investigate integrated metabolic responses—how lipotropic factors, amino acids, and energy cofactors interact to influence overall cellular bioenergetics. Studies of performance metabolism, research into multi-pathway metabolic optimization, and investigation of synergistic cofactor effects benefit from this comprehensive approach.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>Lipo-C Plus extends the basic lipotropic approach by incorporating cofactors required for optimal metabolic enzyme function. Beyond the core methionine-inositol-choline lipotropic factors, this formulation adds B-vitamin cofactors essential for one-carbon metabolism, amino acid metabolism, and mitochondrial energy production. The amino acid components provide substrate for protein synthesis during active metabolic remodeling and support gluconeogenesis pathways.</p>
+<p>The enhanced formulation addresses multiple rate-limiting steps in cellular energy metabolism: lipotropic factors mobilize stored lipids, B-vitamins enable efficient metabolism through cofactor-dependent enzymatic pathways, and amino acids support the protein synthesis required for metabolic adaptation. This comprehensive approach makes Lipo-C Plus valuable for research requiring robust metabolic support across multiple pathways simultaneously.</p>
+<h2>Key Research Findings</h2>
+<ul><li>B-vitamin cofactors enhance lipotropic factor activity by supporting methylation reactions and one-carbon metabolism pathways</li><li>Amino acid supplementation improves metabolic outcomes in cellular energy metabolism models by providing gluconeogenic substrates and supporting protein turnover</li><li>Multi-component metabolic formulations demonstrate superior effects compared to individual factor supplementation in complex cellular systems</li></ul>
 <h2>Research Applications</h2>
 <ul><li>Integrated metabolic pathway research</li><li>Cellular bioenergetics</li><li>Multi-cofactor synergy</li><li>Performance metabolism models</li><li>Energy production mechanisms</li><li>Comprehensive metabolic support systems</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +127,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0"><h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3><ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem"><li>Stover PJ. One-carbon metabolism-genome interactions in folate-associated pathologies. J Nutr. 2009;139(12):2402-5. PMID: 19812215</li><li>Brosnan JT, Brosnan ME. Branched-chain amino acids: enzyme and substrate regulation. J Nutr. 2006;136(1 Suppl):207S-11S. PMID: 16365084</li></ol></div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
