--- a/products/lipo-c-ultra.html
+++ b/products/lipo-c-ultra.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10ml</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>Complete metabolic blend (MIC + L-Carnitine + B12 + chromium)</td></tr>
 <tr><td>CAS Number</td><td>Premium blend</td></tr>
 <tr><td>Molecular Weight</td><td>Multi-component</td></tr>
 <tr><td>Molecular Formula</td><td>Complete metabolic</td></tr>
@@ -97,8 +97,11 @@
 </div>
 <h2>What is Lipo-C Ultra Blend?</h2>
 <p>Lipo-C Ultra represents the apex of multi-component metabolic formulation. This premium blend incorporates every category of metabolic support compound: classic lipotropic factors for hepatic lipid processing, amino acids for protein synthesis and neurotransmitter production, mitochondrial cofactors for energy production, and performance-enhancing compounds for cellular optimization. The result: a research tool that enables investigation of fully-supported metabolic systems rather than isolated pathways.</p><p>Researchers exploring maximal metabolic capacity, investigating how multiple metabolic pathways integrate under optimal conditions, or studying comprehensive metabolic interventions find this formulation essential. The blend eliminates the limitation of single-factor studies, revealing system-level metabolic responses that emerge only when all necessary cofactors and substrates are available.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>Lipo-C Ultra provides comprehensive metabolic support by targeting every major regulatory node in cellular energy metabolism. The lipotropic base (methionine, inositol, choline, L-carnitine) addresses hepatic lipid mobilization and mitochondrial fatty acid transport. Methylcobalamin (vitamin B12) serves as cofactor for methionine synthase and methylmalonyl-CoA mutase, supporting both methylation reactions and propionyl-CoA metabolism. Chromium enhances insulin receptor signaling and glucose transporter function, improving cellular glucose uptake efficiency.</p>
+<p>The formulation's comprehensive nature allows it to support metabolic function across multiple tissue types and metabolic states. By simultaneously addressing lipid mobilization, mitochondrial function, methylation capacity, and glucose utilization, Lipo-C Ultra provides complete metabolic infrastructure support for research models requiring robust multi-pathway metabolic activity. This makes it particularly valuable for complex metabolic research where single-pathway interventions prove insufficient.</p>
+<h2>Key Research Findings</h2>
+<ul><li>Chromium supplementation enhances insulin receptor signaling and improves glucose metabolism in cellular models through effects on insulin receptor kinase activity</li><li>Methylcobalamin supports one-carbon metabolism and reduces homocysteine accumulation through its role in methionine synthase function</li><li>Comprehensive multi-component metabolic formulations demonstrate synergistic benefits across lipid, carbohydrate, and amino acid metabolism pathways</li></ul>
 <h2>Research Applications</h2>
 <ul><li>Comprehensive metabolic system research</li><li>Multi-pathway integration studies</li><li>Maximal metabolic capacity models</li><li>System-level bioenergetics</li><li>Performance optimization research</li><li>Complex metabolic phenotyping</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +127,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0"><h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3><ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem"><li>Vincent JB. The biochemistry of chromium. J Nutr. 2000;130(4):715-8. PMID: 10736319</li><li>Watanabe F, Bito T. Vitamin B12 sources and microbial interaction. Exp Biol Med. 2018;243(2):148-58. PMID: 29216732</li></ol></div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
