--- a/products/ll-37.html
+++ b/products/ll-37.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>LLGDFFRKSKEKIGKEFKRIVQRIKDFLRNLVPRTES</td></tr>
 <tr><td>CAS Number</td><td>154947-66-7</td></tr>
 <tr><td>Molecular Weight</td><td>4493.3 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>205</sub>H<sub>340</sub>N<sub>60</sub>O<sub>53</sub></td></tr>
@@ -97,8 +97,11 @@
 </div>
 <h2>What is LL-37?</h2>
 <p>LL-37 occupies a unique position in human immunology: it is the only antimicrobial peptide produced by the human cathelicidin family, unlike other species that express multiple cathelicidin variants. Cleaved from the C-terminus of the hCAP18 precursor protein, this amphipathic alpha-helical peptide demonstrates broad-spectrum antimicrobial activity against bacteria, fungi, and enveloped viruses through membrane disruption. Beyond direct antimicrobial action, LL-37 exhibits immunomodulatory functions—recruiting immune cells, modulating inflammatory responses, and promoting wound closure.</p><p>Expression of LL-37 is induced by vitamin D, linking nutritional status to innate immune capacity—a relationship that has made this peptide central to research on vitamin D-dependent immunity. Its multi-functional profile (antimicrobial, chemotactic, angiogenic, and wound-healing) makes LL-37 essential for studying the complex roles of antimicrobial peptides beyond simple pathogen killing.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>LL-37 exerts antimicrobial activity through multiple complementary mechanisms. As an amphipathic α-helical peptide, it inserts into bacterial membranes, disrupting lipid bilayer integrity and causing membrane depolarization and cell lysis. The peptide's cationic residues enable electrostatic interaction with negatively charged bacterial membrane components (lipopolysaccharide, lipoteichoic acid), while its hydrophobic face facilitates membrane insertion. This dual nature allows LL-37 to discriminate between bacterial and mammalian membranes based on charge distribution differences.</p>
+<p>Beyond direct antimicrobial effects, LL-37 functions as an immunomodulator by binding formyl peptide receptor-like 1 (FPRL1) and purinergic P2X7 receptors on immune cells. This receptor engagement triggers chemotaxis, modulates cytokine production, and enhances phagocytosis. LL-37 also neutralizes bacterial endotoxins, suppresses inflammatory cascades initiated by pattern recognition receptors, and promotes wound healing through effects on keratinocyte migration and angiogenesis—making it a multifunctional innate immune effector.</p>
+<h2>Key Research Findings</h2>
+<ul><li>Demonstrated broad-spectrum antimicrobial activity through direct membrane disruption and immunomodulatory effects on multiple immune cell populations (Vandamme et al. Cell Immunol 2012;280(1):22-35. PMID: 23246832)</li><li>Modulates inflammatory responses by neutralizing bacterial endotoxins and regulating cytokine production through interaction with formyl peptide receptors</li><li>Promotes wound healing and tissue repair through chemotactic effects on keratinocytes and endothelial cells, supporting angiogenesis and re-epithelialization</li></ul>
 <h2>Research Applications</h2>
 <ul><li>Antimicrobial mechanism studies</li><li>Innate immunity research</li><li>Membrane disruption models</li><li>Biofilm penetration research</li><li>Immune cell chemotaxis</li><li>Wound healing immunity</li><li>Vitamin D-dependent peptide regulation</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +127,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0"><h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3><ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem"><li>Vandamme D, Landuyt B, Luyten W, Schoofs L. A comprehensive summary of LL-37, the factotum human cathelicidin peptide. Cell Immunol. 2012;280(1):22-35. PMID: 23246832</li></ol></div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
