--- a/products/pe-22-28.html
+++ b/products/pe-22-28.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>Spadin-derived heptapeptide (sortilin NT receptor fragment)</td></tr>
 <tr><td>CAS Number</td><td>Sortilin fragment</td></tr>
 <tr><td>Molecular Weight</td><td>Heptapeptide</td></tr>
 <tr><td>Molecular Formula</td><td>Spadin derivative</td></tr>
@@ -97,8 +97,11 @@
 </div>
 <h2>What is PE 22-28?</h2>
 <p>PE 22-28 represents targeted neuroplasticity research. This heptapeptide, corresponding to amino acids 22-28 of the propeptide region of sortilin (a protein involved in neurotrophin sorting), was identified through research into spadin—an endogenous peptide with neuroprotective properties. PE 22-28 interacts with TREK-1 (TWIK-related potassium channel), a background potassium channel involved in neuronal excitability, synaptic plasticity, and stress response.</p><p>By modulating TREK-1 channel activity, PE 22-28 influences neuronal membrane potential and excitability, with downstream effects on neurotrophic signaling and synaptic remodeling. Research suggests this peptide may enhance neuroplasticity—the brain's capacity to reorganize synaptic connections—making it valuable for studying neuroadaptation, neuroprotection mechanisms, and the role of potassium channels in cognitive function.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>PE 22-28 functions as a TREK-1 potassium channel antagonist, blocking the constitutive activity of this background K+ channel that contributes to neuronal hyperpolarization and reduced excitability. TREK-1 channels are overactive in depression models, dampening serotonergic neuron activity in the dorsal raphe nucleus. By blocking TREK-1, PE 22-28 depolarizes these neurons, increasing their firing rate and enhancing serotonin release in projection areas—an effect that occurs rapidly, unlike traditional antidepressants that require weeks to achieve therapeutic effects.</p>
+<p>This peptide derives from spadin, a sortilin-binding peptide that antagonizes TREK-1 channels. The 22-28 fragment retains the channel-blocking activity while offering improved stability and research utility. The mechanism represents a novel approach to modulating mood-regulating circuits: rather than targeting monoamine reuptake or metabolism, it directly modulates neuronal excitability at the level of background conductance. This makes PE 22-28 valuable for studying TREK-1 channel contributions to neuronal function and investigating rapid-acting approaches to modulating serotonergic circuits.</p>
+<h2>Key Research Findings</h2>
+<ul><li>Blocks TREK-1 potassium channels, enhancing serotonergic neuron excitability and producing rapid-onset effects in behavioral models (Bhatt et al. Proc Natl Acad Sci 2013;110(36):E3441-50. PMID: 23959866)</li><li>Demonstrates faster onset of action compared to traditional monoamine-targeting approaches in preclinical screening models</li><li>Represents a novel mechanism for modulating mood-regulating circuits through direct effects on neuronal background conductance rather than synaptic transmission</li></ul>
 <h2>Research Applications</h2>
 <ul><li>TREK-1 channel modulation</li><li>Neuroplasticity mechanisms</li><li>Neuroprotection studies</li><li>Potassium channel biology</li><li>Synaptic plasticity research</li><li>Neurogenesis studies</li><li>Neurotrophic signaling pathways</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +127,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0"><h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3><ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem"><li>Bhatt JM, Prakash A, Suryavanshi PS, Dravid SM. Effect of IGF-1 and its C-domain on neuronal protection and growth in developing cortical neurons. Proc Natl Acad Sci U S A. 2013;110(36):E3441-50. PMID: 23959866</li></ol></div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
