--- a/products/selank-10mg.html
+++ b/products/selank-10mg.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>Thr-Lys-Pro-Arg-Pro-Gly-Pro</td></tr>
 <tr><td>CAS Number</td><td>129954-34-3</td></tr>
 <tr><td>Molecular Weight</td><td>751.9 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>33</sub>H<sub>57</sub>N<sub>11</sub>O<sub>9</sub></td></tr>
@@ -97,8 +97,11 @@
 </div>
 <h2>What is Selank 10mg?</h2>
 <p>Developed at Moscow's Institute of Molecular Genetics, Selank represents a rational design approach to neuropeptide therapeutics—a synthetic heptapeptide built upon the immune peptide tuftsin's structural scaffold. This derivative demonstrates the rare capacity to simultaneously modulate IL-6 expression and influence monoaminergic neurotransmitter systems, bridging neuroimmune signaling in ways few compounds can. Its dual action on GABA and serotonin pathways has positioned it as a cornerstone tool in anxiety neurobiology research.</p><p>Researchers investigating the intersection of immune signaling and behavioral neuroscience find Selank indispensable. Over two decades of Russian neurochemical research have characterized its mechanism across multiple systems, making it one of the most comprehensively studied synthetic anxiolytics in contemporary neuropharmacology.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>Selank functions as a synthetic analogue of tuftsin (Thr-Lys-Pro-Arg), an endogenous immunomodulatory peptide, with an extended C-terminal sequence (Pro-Gly-Pro) that enhances metabolic stability and CNS penetration. The peptide modulates multiple neurotransmitter systems: it influences GABAergic transmission without direct receptor binding, enhances expression of brain-derived neurotrophic factor (BDNF), and affects monoamine metabolism. These pleiotropic effects produce anxiolytic and cognitive-enhancing properties through complementary mechanisms rather than single-target receptor pharmacology.</p>
+<p>Selank's immunomodulatory effects involve regulation of IL-6 and other cytokines, creating a bidirectional brain-immune communication pathway. The peptide also influences enkephalin metabolism by inhibiting enkephalin-degrading enzymes, potentiating endogenous opioid signaling without direct opioid receptor activation. This unique mechanism—modulating neurotransmitter degradation rather than receptor binding—produces effects distinct from traditional anxiolytics. Its multi-system activity makes Selank valuable for studying interactions between stress, immunity, and cognitive function.</p>
+<h2>Key Research Findings</h2>
+<ul><li>Modulates multiple neurotransmitter systems including GABAergic, monoaminergic, and enkephalin pathways through indirect mechanisms that differ from traditional receptor-targeting approaches</li><li>Enhances BDNF expression and supports cognitive function in stress-exposure models, demonstrating neuroprotective properties</li><li>Exhibits immunomodulatory effects through cytokine regulation, establishing bidirectional communication between nervous and immune systems</li></ul>
 <h2>Research Applications</h2>
 <ul><li>Anxiety model studies</li><li>Cognitive function research</li><li>Immune-neuro axis modulation</li><li>GABAergic pathway studies</li><li>Stress response mechanisms</li><li>Cytokine regulation research</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +127,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0"><h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3><ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem"><li>Uchakina ON, Uchakin PN, Moshkin MP, Markel AL, Suzuki K. Enkephalin system in lymphoid organs and immune functions in OXYS rats with hereditary syndrome of accelerated aging. Brain Behav Immun. 2008;22(2):278-87. PMID: 17890050</li></ol></div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
