--- a/products/ss-31.html
+++ b/products/ss-31.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>D-Arg-Dmt-Lys-Phe-NH2</td></tr>
 <tr><td>CAS Number</td><td>736992-21-5</td></tr>
 <tr><td>Molecular Weight</td><td>639.8 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>32</sub>H<sub>49</sub>N<sub>9</sub>O<sub>5</sub></td></tr>
@@ -97,8 +97,11 @@
 </div>
 <h2>What is SS-31?</h2>
 <p>SS-31 (Szeto-Schiller peptide 31, D-Arg-Dmt-Lys-Phe-NH2) represents a breakthrough in mitochondria-targeted therapeutics. This cell-permeable tetrapeptide contains alternating cationic and aromatic residues that enable it to penetrate cells and selectively accumulate at the inner mitochondrial membrane, where it binds with high affinity to cardiolipin—the signature phospholipid of mitochondrial membranes. This cardiolipin interaction stabilizes cristae architecture, the elaborately folded inner membrane structures that house the electron transport chain.</p><p>Unlike broad antioxidants, SS-31 concentrates precisely where mitochondrial ROS are generated—at the electron transport chain. By optimizing cristae structure and reducing electron leak, SS-31 decreases reactive oxygen species production at the source while preserving mitochondrial membrane potential and ATP synthesis. This mechanism has made SS-31 invaluable in ischemia-reperfusion research, neurodegenerative disease models, and studies of mitochondrial dysfunction.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>SS-31 (Elamipretide) operates through selective accumulation in the inner mitochondrial membrane, where it binds cardiolipin—a phospholipid critical for electron transport chain complex assembly and function. This interaction stabilizes cardiolipin structure, preventing its peroxidation and maintaining proper cristae organization. The alternating cationic-aromatic structure of SS-31 enables it to penetrate lipid bilayers independently of membrane potential, allowing it to reach dysfunctional mitochondria that traditional mitochondria-targeted antioxidants cannot access.</p>
+<p>By protecting cardiolipin, SS-31 preserves electron transport chain supercomplex formation, reduces electron leak, and decreases reactive oxygen species generation at the source. This mechanism differs fundamentally from antioxidant scavenging—rather than neutralizing ROS after formation, SS-31 prevents excessive ROS production by maintaining optimal electron transport efficiency. The peptide also preserves ATP synthase dimers that shape cristae structure, maintaining the proton gradient required for efficient ATP production. This makes SS-31 a unique tool for studying mitochondrial membrane organization and its role in bioenergetics and oxidative stress.</p>
+<h2>Key Research Findings</h2>
+<ul><li>Selectively targets and stabilizes cardiolipin in the inner mitochondrial membrane, preserving electron transport chain function and reducing ROS generation at the source (Szeto HH. AAPS J 2006;8(3):E521-31. PMID: 17025271)</li><li>Maintains mitochondrial cristae structure and ATP synthase organization, improving bioenergetic efficiency in models of mitochondrial dysfunction</li><li>Demonstrates tissue-protective effects across multiple organ systems through preservation of mitochondrial function during ischemic and oxidative stress conditions</li></ul>
 <h2>Research Applications</h2>
 <ul><li>Mitochondrial membrane research</li><li>Cardiolipin interaction studies</li><li>Cristae structure biology</li><li>Mitochondrial ROS modulation</li><li>Ischemia-reperfusion models</li><li>Mitochondrial bioenergetics</li><li>Targeted mitochondrial protection</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +127,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0"><h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3><ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem"><li>Szeto HH. Cell-permeable, mitochondrial-targeted, peptide antioxidants. AAPS J. 2006;8(3):E521-31. PMID: 17025271</li></ol></div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
