--- a/products/thymalin.html
+++ b/products/thymalin.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>Thymic peptide bioregulator (Glu-Trp dipeptide complex)</td></tr>
 <tr><td>CAS Number</td><td>Thymic extract</td></tr>
 <tr><td>Molecular Weight</td><td>Peptide mixture</td></tr>
 <tr><td>Molecular Formula</td><td>Short peptides</td></tr>
@@ -97,8 +97,11 @@
 </div>
 <h2>What is Thymalin?</h2>
 <p>Thymalin belongs to a unique category of biological compounds developed in the Soviet Union: bioregulators—short peptides (typically 2-4 amino acids) extracted from specific organs that demonstrate tissue-specific regulatory effects. Isolated from thymus tissue, Thymalin contains peptides that appear to modulate T-cell differentiation and thymic function through mechanisms still being elucidated, possibly involving chromatin remodeling and gene expression regulation.</p><p>The bioregulator hypothesis suggests these short peptides bind to DNA regulatory regions, influencing cell differentiation and function in their tissue of origin. While mechanistic details continue to emerge, decades of research in Russia and Eastern Europe have characterized Thymalin's effects on immune function, T-cell populations, and adaptive immunity—making it valuable for thymic biology research and immunosenescence studies.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>Thymalin represents a family of short peptides derived from thymic tissue that function as bioregulators—molecules that restore homeostatic function in specific tissue systems. The extract contains multiple peptides including the key Glu-Trp dipeptide that appears to act through epigenetic mechanisms, modulating gene expression patterns in T-lymphocytes and thymic epithelial cells. Rather than activating specific receptor cascades, these bioregulators appear to influence chromatin structure and transcription factor accessibility, normalizing cellular function that has deviated from optimal states.</p>
+<p>The peptides' immunomodulatory effects center on T-cell maturation and function: they enhance differentiation of T-cell precursors in the thymus, improve T-cell proliferation in response to antigenic stimulation, and restore balance between helper and cytotoxic T-cell populations. This makes thymalin particularly relevant for research on immunosenescence—the age-related decline in immune function driven largely by thymic involution. The bioregulator concept—short peptides that normalize tissue-specific gene expression—represents a distinct mechanism from traditional pharmaceutical targeting of specific receptors or enzymes.</p>
+<h2>Key Research Findings</h2>
+<ul><li>Enhances T-cell maturation and immune function through epigenetic modulation of gene expression in lymphoid tissues (Khavinson VK. Bull Exp Biol Med 2002;133(1):1-5. PMID: 12360680)</li><li>Demonstrates tissue-specific bioregulatory effects that restore homeostatic function without direct receptor activation, representing a distinct mechanism from conventional pharmacology</li><li>Shows particular efficacy in models of immunosenescence, restoring T-cell function and thymic activity that decline with age</li></ul>
 <h2>Research Applications</h2>
 <ul><li>T-cell differentiation studies</li><li>Thymic function research</li><li>Bioregulator peptide mechanisms</li><li>Immune system modulation</li><li>Immunosenescence models</li><li>Adaptive immunity research</li><li>Peptide-DNA interaction studies</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +127,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0"><h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3><ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem"><li>Khavinson VK. Peptides and ageing. Bull Exp Biol Med. 2002;133(1):1-5. PMID: 12360680</li></ol></div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
