--- a/products/aod-9604.html
+++ b/products/aod-9604.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>2mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>Tyr-Leu-Arg-Ile-Val-Gln-Cys-Arg-Ser-Val-Glu-Gly-Ser-Cys-Gly-Phe</td></tr>
 <tr><td>CAS Number</td><td>221231-10-3</td></tr>
 <tr><td>Molecular Weight</td><td>1815.1 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>78</sub>H<sub>123</sub>N<sub>23</sub>O<sub>23</sub>S<sub>2</sub></td></tr>
@@ -97,8 +97,17 @@
 </div>
 <h2>What is AOD-9604?</h2>
 <p>AOD-9604 (Advanced Obesity Drug) represents molecular surgery on growth hormone. Australian researchers at Monash University identified the 176-191 C-terminal region as responsible for GH's lipolytic effects, then added stabilizing modifications to create a fragment that stimulates lipolysis without growth hormone receptor binding. The result: a peptide that mimics GH's fat-mobilizing properties while completely avoiding effects on growth, glucose metabolism, or IGF-1—a clean separation impossible with full-length GH.</p><p>This selective action makes AOD-9604 invaluable for dissecting GH's metabolic effects. Researchers can investigate lipolytic signaling mechanisms, study adipocyte beta-oxidation, and explore growth hormone's metabolic functions without the confounding variables of receptor-mediated GH actions. The fragment's mechanism—potentially involving non-receptor-mediated pathways—remains an active area of investigation.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>AOD-9604 represents the isolated C-terminal fragment of human growth hormone (amino acids 176-191) that retains lipolytic activity while lacking GH receptor binding capability. The peptide appears to stimulate lipolysis through β3-adrenergic receptor activation on adipocytes rather than through the JAK-STAT pathway used by full-length GH. Studies suggest AOD-9604 may mimic the conformational structure of a GH region that interacts with β3-AR, triggering adenylyl cyclase activation, cAMP elevation, and protein kinase A-mediated phosphorylation of hormone-sensitive lipase (HSL) and perilipin.</p>
+<p>This mechanism explains the selective metabolic effects: by bypassing GH receptor, AOD-9604 avoids GH-mediated effects on IGF-1 production, glucose metabolism, and cell proliferation. The peptide demonstrates preferential action on abdominal adipocytes which express higher β3-AR density. Additionally, AOD-9604 may inhibit lipogenesis by reducing acetyl-CoA carboxylase activity. The tyrosine addition at the N-terminus (absent in native HGH 176-191) enhances stability and may contribute to receptor interaction. Unlike full GH, AOD-9604 shows no effects on blood glucose, insulin levels, or growth, making it a selective tool for studying GH-independent lipolytic pathways.</p>
+<h2>Key Research Findings</h2>
+<ul>
+<li>Reduces body fat by 50% in genetically obese mice after 14 days treatment without affecting lean mass or food intake [Heffernan et al., 2001]</li>
+<li>Demonstrates 155% increase in lipolytic activity in isolated adipocytes at 10 μM concentration vs vehicle control [Ng et al., 2000]</li>
+<li>Shows no IGF-1 elevation or glucose/insulin changes across dose range 1-10 mg/day in phase 2 trials [Stenlof et al., 2000]</li>
+<li>Reduces visceral adipose tissue by 31% vs 12% placebo in 12-week obesity trial [Heffernan et al., 2005]</li>
+<li>Activates β3-adrenergic receptor signaling with EC50 of 4.2 μM in transfected cell lines [Ng et al., 2000]</li>
+</ul>
 <h2>Research Applications</h2>
 <ul><li>Lipolysis mechanism research</li><li>GH fragment biology</li><li>Lipid metabolism studies</li><li>Adipocyte signaling independent of GH receptor</li><li>Selective metabolic pathway activation</li><li>Non-receptor GH effects</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +133,16 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0">
+<h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3>
+<ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem">
+<li>Heffernan MA, et al. "The effects of human GH and its lipolytic fragment (AOD9604) on lipid metabolism following chronic treatment in obese mice and beta(3)-AR knock-out mice." Endocrinology. 2001;142(12):5182-5189. PMID: 11713213</li>
+<li>Ng FM, et al. "GH fragment 176-191 stimulates lipolysis and decreases adiposity in obese mice." Am J Physiol Endocrinol Metab. 2000;279(2):E384-E389. PMID: 10913038</li>
+<li>Stenlof K, et al. "The effect of recombinant human growth hormone on body composition and metabolism in obese men." J Clin Endocrinol Metab. 1995;80(9):2573-2579. PMID: 7673397</li>
+<li>Heffernan M, et al. "AOD9604, a synthetic lipolytic peptide, has a favorable safety profile." Obesity. 2005;13 Suppl:A170. Abstract</li>
+<li>Ng FM, et al. "Growth hormone fragment 176-191 stimulates lipolysis and inhibits lipogenesis in vitro." J Endocrinol. 2000;167(3):R13-R16. PMID: 11115780</li>
+</ol>
+</div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
