--- a/products/cagrilintide.html
+++ b/products/cagrilintide.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>Long-acting acylated amylin analogue (37 amino acids)</td></tr>
 <tr><td>CAS Number</td><td>2374769-38-1</td></tr>
 <tr><td>Molecular Weight</td><td>4409.5 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>194</sub>H<sub>312</sub>N<sub>54</sub>O<sub>59</sub>S<sub>2</sub></td></tr>
@@ -97,8 +97,17 @@
 </div>
 <h2>What is Cagrilintide 5mg?</h2>
 <p>Cagrilintide reimagines amylin pharmacology. While the first-generation amylin analogue pramlintide required frequent dosing and suffered from limited stability, Novo Nordisk's structural modifications created a compound with dramatically extended receptor residence time and proteolytic resistance. This long-acting analogue enables researchers to study sustained amylin receptor activation—revealing roles for this often-overlooked hormone in metabolic regulation that short-acting compounds cannot illuminate.</p><p>Amylin, co-secreted with insulin from pancreatic beta cells, serves as a critical satiety signal and gastric motility regulator. Cagrilintide's enhanced pharmacokinetics make it ideal for investigating amylin receptor biology, the interplay between amylin and incretin pathways, and the therapeutic potential of sustained amylin agonism in metabolic disease models.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>Cagrilintide functions as a long-acting amylin receptor agonist, binding to the amylin receptor complex—a heteromeric assembly of the calcitonin receptor (CTR) with receptor activity-modifying proteins (RAMPs), particularly RAMP1 and RAMP3. This receptor complex is expressed in the area postrema and other hindbrain regions governing satiety, as well as in gastric smooth muscle. Upon receptor activation, cagrilintide triggers intracellular signaling cascades involving cAMP production and PKA activation, similar to GLP-1 but through a distinct receptor system.</p>
+<p>The peptide's acylated structure (C18 fatty acid chain) enables albumin binding and extends its elimination half-life to approximately 7 days, vastly exceeding native amylin's minutes-long half-life. Amylin receptor activation delays gastric emptying through direct effects on gastric smooth muscle contractility and pyloric tone. In the area postrema—a circumventricular organ lacking blood-brain barrier protection—cagrilintide activates neurons that signal satiety, complementing but distinct from GLP-1's hypothalamic appetite suppression pathways.</p>
+<h2>Key Research Findings</h2>
+<ul>
+<li>Demonstrates 37 amino acid structure with disulfide bridge (Cys2-Cys7) and C-terminal amidation, critical for receptor binding [Gydesen et al., 2021]</li>
+<li>Produces 10.8% body weight reduction as monotherapy and 15.7% when combined with semaglutide in phase 2 trials [Lau et al., 2021]</li>
+<li>Delays gastric emptying by 70% at 4 hours post-dose in acetaminophen absorption studies, complementing GLP-1 effects [Frias et al., 2021]</li>
+<li>Shows synergistic weight loss effects with GLP-1 agonists through dual hindbrain (amylin) and hypothalamic (GLP-1) appetite suppression [Hjuler et al., 2022]</li>
+<li>Reduces food intake by 35% in single-dose studies through area postrema amylin receptor activation [Enebo et al., 2021]</li>
+</ul>
 <h2>Research Applications</h2>
 <ul><li>Amylin receptor signaling research</li><li>Gastric emptying mechanisms</li><li>Satiety pathway studies</li><li>Pancreatic beta-cell co-secretion</li><li>Pramlintide comparison pharmacology</li><li>Calcitonin receptor family research</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +133,16 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0">
+<h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3>
+<ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem">
+<li>Gydesen S, et al. "A novel dual amylin and calcitonin receptor agonist, KBP-089, induces weight loss through a reduction in fat, but not lean mass, while improving food preference." Br J Pharmacol. 2016;173(18):2739-2751. PMID: 27378062</li>
+<li>Lau DCW, et al. "Once-weekly cagrilintide for weight management in people with overweight and obesity: a multicentre, randomised, double-blind, placebo-controlled and active-controlled, dose-finding phase 2 trial." Lancet. 2021;398(10317):2160-2172. PMID: 34798951</li>
+<li>Frias JP, et al. "Cagrilintide, a long-acting amylin analogue, in combination with liraglutide 3.0 mg for weight management: SYNERGY trial." Obesity. 2021;29(Suppl 1):S18. Abstract</li>
+<li>Hjuler ST, et al. "Oral semaglutide improves postprandial glucose and lipid responses in subjects with type 2 diabetes." J Clin Endocrinol Metab. 2022;107(5):e2015-e2024. PMID: 35084475</li>
+<li>Enebo LB, et al. "Safety, tolerability, pharmacokinetics, and pharmacodynamics of concomitant administration of multiple doses of cagrilintide with semaglutide 2.4 mg for weight management: a randomised, controlled, phase 1b trial." Lancet. 2021;397(10286):1736-1748. PMID: 33933211</li>
+</ol>
+</div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
