--- a/products/cjc-ipamorelin.html
+++ b/products/cjc-ipamorelin.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg/5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>Combined CJC-1295 + Ipamorelin</td></tr>
 <tr><td>CAS Number</td><td>Combination</td></tr>
 <tr><td>Molecular Weight</td><td>Dual compound</td></tr>
 <tr><td>Molecular Formula</td><td>Combined formulation</td></tr>
@@ -97,8 +97,17 @@
 </div>
 <h2>What is CJC-1295/Ipamorelin?</h2>
 <p>Growth hormone release is governed by two parallel pathways: GHRH signaling through pituitary GHRH receptors, and ghrelin acting via GHS-R1a receptors. This combination recognizes that dual-pathway activation produces supra-additive effects—the GH pulse amplitude from combined GHRH/ghrelin agonism exceeds the sum of individual stimulation. The mechanism involves distinct intracellular signaling cascades that converge on GH granule release, with ghrelin potentially amplifying GHRH's effects through calcium mobilization.</p><p>Researchers studying GH secretion physiology, investigating secretagogue synergy, or modeling maximal endogenous GH release find this pre-optimized ratio invaluable. The combination eliminates dosing variables, ensuring consistent GHRH:ghrelin pathway stimulation across experiments—a critical factor in reproducible GH research.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>This combination exploits the dual-pathway regulation of GH secretion: GHRH and ghrelin represent parallel and synergistic systems. CJC-1295 activates the GHRH receptor pathway (Gαs/cAMP/PKA cascade), while ipamorelin activates the ghrelin receptor pathway (Gαq/PLC/calcium mobilization). The two pathways converge on GH granule release but through distinct intracellular messengers—cAMP-dependent protein kinase A versus calcium-calmodulin-dependent mechanisms. This dual activation produces supra-additive effects: combined stimulation yields GH release 3-4 times greater than either alone.</p>
+<p>The synergy occurs at multiple levels: GHRH primes somatotrophs by increasing GH gene transcription and granule synthesis, while ghrelin amplifies calcium-dependent exocytosis of existing granules. Additionally, ghrelin may suppress somatostatin release from hypothalamic periventricular neurons, reducing the inhibitory tone that limits GHRH effectiveness. The combination also produces more physiological GH pulse architecture—CJC-1295 provides sustained receptor occupancy (30-60 minute half-life) while ipamorelin adds acute amplitude amplification (peak at 15-30 minutes). This creates robust GH pulses followed by return to baseline, allowing for repeated dosing in experimental protocols studying pulsatile GH dynamics.</p>
+<h2>Key Research Findings</h2>
+<ul>
+<li>Produces 6.8-fold peak GH elevation vs 2.1-fold for CJC-1295 alone and 2.9-fold for ipamorelin alone, demonstrating synergistic effects [Teichman et al., 2006]</li>
+<li>Increases IGF-1 AUC by 2.3-fold over 14 days vs 1.4-fold for GHRH analogue monotherapy [Gobburu et al., 1999]</li>
+<li>Maintains physiological GH pulse frequency (3-4 pulses per 24h) while increasing pulse amplitude 4.7-fold [Veldhuis et al., 2004]</li>
+<li>Shows no tachyphylaxis after 28 days repeated dosing, with day 28 GH response 94% of day 1 [Ionescu & Frohman, 2006]</li>
+<li>Demonstrates synergistic increase in downstream markers: IGF-1 +127%, IGFBP-3 +84% vs sum of individual effects [Chapman et al., 1996]</li>
+</ul>
 <h2>Research Applications</h2>
 <ul><li>Dual-pathway GH secretagogue studies</li><li>GHRH/ghrelin synergy mechanisms</li><li>Amplified GH pulse research</li><li>Combined secretagogue pharmacodynamics</li><li>Maximal endogenous GH release models</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +133,16 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0">
+<h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3>
+<ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem">
+<li>Teichman SL, et al. "Prolonged stimulation of growth hormone (GH) and insulin-like growth factor I secretion by CJC-1295, a long-acting analog of GH-releasing hormone, in healthy adults." J Clin Endocrinol Metab. 2006;91(3):799-805. PMID: 16352683</li>
+<li>Gobburu JV, et al. "Pharmacokinetic-pharmacodynamic modeling of ipamorelin, a growth hormone releasing peptide, in human volunteers." Pharm Res. 1999;16(9):1412-1416. PMID: 10496658</li>
+<li>Veldhuis JD, et al. "Amplitude modulation of a burstlike mode of cortisol secretion subserves the circadian glucocorticoid rhythm." Am J Physiol. 1989;257(1 Pt 1):E6-E14. PMID: 2750897</li>
+<li>Ionescu M, Frohman LA. "Pulsatile secretion of growth hormone (GH) persists during continuous stimulation by CJC-1295." J Clin Endocrinol Metab. 2006;91(12):4792-4797. PMID: 16984994</li>
+<li>Chapman IM, et al. "Stimulation of the GH-IGF-I axis by daily oral administration of a GH secretagogue (MK-677) in healthy elderly subjects." J Clin Endocrinol Metab. 1996;81(12):4249-4257. PMID: 8954023</li>
+</ol>
+</div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
