--- a/products/lipo-c-max.html
+++ b/products/lipo-c-max.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10ml</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>Lipotropic compound blend (Methionine, Inositol, Choline, L-Carnitine)</td></tr>
 <tr><td>CAS Number</td><td>Lipotropic blend</td></tr>
 <tr><td>Molecular Weight</td><td>Multi-component</td></tr>
 <tr><td>Molecular Formula</td><td>MIC + L-Carnitine</td></tr>
@@ -97,8 +97,11 @@
 </div>
 <h2>What is Lipo-C MAX Blend?</h2>
 <p>The Lipo-C MAX formulation recognizes that lipid metabolism requires multiple cofactors working in concert. Methionine provides the methyl groups essential for phosphatidylcholine synthesis and methylation reactions. Inositol participates in lipid messenger signaling and cell membrane formation. Choline serves as a precursor for phosphatidylcholine and prevents hepatic lipid accumulation. L-carnitine shuttles long-chain fatty acids into mitochondria for beta-oxidation. Together, these lipotropic factors create the biochemical environment for efficient hepatic lipid processing.</p><p>Researchers studying hepatic steatosis models, investigating lipotropic factor deficiencies, or exploring the interplay between methylation and lipid metabolism find this standardized combination valuable for consistent multi-factor supplementation. The blend enables study of synergistic lipotropic mechanisms that isolated factor research cannot reveal.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>Lipo-C MAX functions through coordinated lipotropic mechanisms targeting multiple steps in hepatic lipid processing. Methionine acts as an essential methyl donor, feeding into S-adenosylmethionine (SAMe) synthesis and supporting the methylation reactions required for phosphatidylcholine production. Choline provides substrate for phosphatidylcholine synthesis both directly and after conversion to betaine, which regenerates methionine from homocysteine. Inositol participates in phosphatidylinositol formation and intracellular signaling cascades that regulate lipid handling.</p>
+<p>L-carnitine completes the metabolic support by facilitating long-chain fatty acid transport across the mitochondrial membrane via the carnitine palmitoyltransferase system, enabling beta-oxidation of mobilized lipids. This multi-component approach addresses both lipid mobilization (methionine, inositol, choline preventing accumulation) and oxidation (L-carnitine enabling mitochondrial fatty acid processing), providing complete metabolic support for studying hepatic lipid dynamics.</p>
+<h2>Key Research Findings</h2>
+<ul><li>Methionine and choline prevent hepatic lipid accumulation through complementary pathways involving phosphatidylcholine synthesis and VLDL export mechanisms</li><li>L-carnitine enhances mitochondrial fatty acid oxidation in cell culture models by increasing fatty acid flux across mitochondrial membranes</li><li>Combined lipotropic factors demonstrate synergistic effects on hepatic lipid metabolism that exceed individual component activities</li></ul>
 <h2>Research Applications</h2>
 <ul><li>Lipotropic factor research</li><li>Hepatic lipid metabolism</li><li>Methyl donor biology</li><li>Choline metabolism</li><li>Mitochondrial fatty acid transport</li><li>One-carbon metabolism</li><li>Phospholipid synthesis studies</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +127,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0"><h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3><ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem"><li>Corbin KD, Zeisel SH. Choline metabolism provides novel insights into nonalcoholic fatty liver disease and its progression. Curr Opin Gastroenterol. 2012;28(2):159-65. PMID: 22134222</li><li>Rebouche CJ. Kinetics, pharmacokinetics, and regulation of L-carnitine and acetyl-L-carnitine metabolism. Ann N Y Acad Sci. 2004;1033:30-41. PMID: 15591001</li></ol></div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
