--- a/products/mots-c.html
+++ b/products/mots-c.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>Met-Arg-Trp-Gln-Glu-Met-Gly-Tyr-Ile-Phe-Tyr-Pro-Arg-Lys-Leu-Arg</td></tr>
 <tr><td>CAS Number</td><td>1627580-64-6</td></tr>
 <tr><td>Molecular Weight</td><td>2174.6 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>101</sub>H<sub>152</sub>N<sub>28</sub>O<sub>22</sub>S<sub>2</sub></td></tr>
@@ -97,8 +97,11 @@
 </div>
 <h2>What is MOTS-c?</h2>
 <p>MOTS-c represents a paradigm shift in cellular biology. Discovered in 2015 by researchers at USC, this peptide revealed that the mitochondrial genome—long thought to encode only 13 proteins—contains open reading frames for signaling peptides that regulate nuclear gene expression. MOTS-c, encoded within the mitochondrial 12S rRNA gene, acts as a mitochondrial-to-nuclear messenger: during metabolic stress, it translocates to the nucleus and binds DNA regulatory regions, modulating expression of genes involved in glucose metabolism and insulin sensitivity.</p><p>This mitochondrial-nuclear communication pathway challenges traditional views of metabolic regulation. MOTS-c activates AMPK, enhances glucose uptake, and improves metabolic flexibility—effects that position it at the intersection of aging research, metabolic disease modeling, and the study of retrograde signaling from mitochondria to nucleus.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>MOTS-c operates as a retrograde mitochondrial signaling molecule that coordinates nuclear gene expression with mitochondrial metabolic status. Encoded within the mitochondrial 12S rRNA gene, this peptide translocates to the nucleus under metabolic stress, where it interacts with nuclear transcription factors to upregulate genes involved in glucose metabolism and insulin sensitivity. This mitochondrial-nuclear communication pathway allows cellular metabolic adaptation to occur in response to changes in mitochondrial function.</p>
+<p>The peptide's metabolic effects center on AMPK activation and subsequent regulation of glucose and lipid metabolism. MOTS-c enhances glucose uptake in skeletal muscle through GLUT4 translocation, improves insulin sensitivity, and shifts metabolism toward fat oxidation. Its ability to restore metabolic homeostasis under conditions of metabolic stress (obesity, insulin resistance, aging) makes it a valuable tool for studying mitochondrial dysfunction and metabolic disease mechanisms—representing a novel class of mitochondrial-derived peptides with systemic metabolic regulatory functions.</p>
+<h2>Key Research Findings</h2>
+<ul><li>Enhances insulin sensitivity and glucose metabolism through AMPK activation and promotes metabolic adaptation to exercise and caloric restriction (Lee et al. Cell Metab 2015;21(3):443-54. PMID: 25738459)</li><li>Demonstrates age-dependent decline in endogenous levels, with supplementation reversing metabolic dysfunction associated with aging in preclinical models</li><li>Regulates folate-methionine cycle activity and coordinates mitochondrial-nuclear metabolic communication under stress conditions</li></ul>
 <h2>Research Applications</h2>
 <ul><li>Mitochondrial-nuclear signaling</li><li>Metabolic homeostasis mechanisms</li><li>AMPK pathway research</li><li>Insulin sensitivity studies</li><li>Mitochondrial genome function</li><li>Retrograde signaling research</li><li>Exercise mimetic studies</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +127,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0"><h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3><ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem"><li>Lee C, Zeng J, Drew BG, et al. The mitochondrial-derived peptide MOTS-c promotes metabolic homeostasis and reduces obesity and insulin resistance. Cell Metab. 2015;21(3):443-54. PMID: 25738459</li></ol></div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
