--- a/products/nad-500mg.html
+++ b/products/nad-500mg.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>500mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>Nicotinamide adenine dinucleotide (C21H27N7O14P2)</td></tr>
 <tr><td>CAS Number</td><td>53-84-9</td></tr>
 <tr><td>Molecular Weight</td><td>663.4 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>21</sub>H<sub>27</sub>N<sub>7</sub>O<sub>14</sub>P<sub>2</sub></td></tr>
@@ -97,8 +97,11 @@
 </div>
 <h2>What is NAD+ 500mg?</h2>
 <p>Nicotinamide adenine dinucleotide occupies a position of unparalleled importance in cellular biochemistry. This dinucleotide serves simultaneously as an electron carrier in redox reactions (the NAD+/NADH couple drives glycolysis, the TCA cycle, and oxidative phosphorylation), a substrate for sirtuins (deacetylases that regulate metabolism and longevity pathways), a substrate for PARPs (DNA repair enzymes), and a precursor for calcium signaling molecules. Without adequate NAD+, cellular energy production, gene expression regulation, and DNA maintenance all collapse.</p><p>NAD+ levels decline with age across tissues, correlating with metabolic dysfunction and cellular senescence—a relationship that has positioned NAD+ at the center of aging research. Studies investigating sirtuins, researching cellular energy metabolism, exploring DNA repair mechanisms, or modeling age-related NAD+ decline require direct NAD+ administration or measurement.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>NAD+ functions as a critical electron carrier in cellular redox reactions, serving as the oxidizing agent in glycolysis, the citric acid cycle, and the electron transport chain. Beyond its role in energy metabolism, NAD+ serves as substrate for multiple regulatory enzyme families including sirtuins (protein deacetylases), poly(ADP-ribose) polymerases (PARPs involved in DNA repair), and CD38 (cyclic ADP-ribose synthase). These NAD+-consuming enzymes link cellular energy status to gene expression, DNA repair, and calcium signaling.</p>
+<p>Age-related NAD+ decline compromises these regulatory pathways, contributing to mitochondrial dysfunction, genomic instability, and metabolic dysregulation. NAD+ supplementation restores activity of NAD+-dependent enzymes: sirtuins enhance mitochondrial biogenesis and stress resistance, PARPs maintain genomic integrity, and improved electron transport chain function enhances cellular energy production. This makes NAD+ a central hub connecting metabolism, epigenetics, and cellular maintenance—positioning it as a key research tool for studying aging and metabolic disease mechanisms.</p>
+<h2>Key Research Findings</h2>
+<ul><li>Restores mitochondrial function and enhances cellular energy metabolism through effects on electron transport chain efficiency and sirtuin-mediated mitochondrial biogenesis (Yoshino et al. Cell Metab 2018;27(3):513-28. PMID: 29249689)</li><li>Supports DNA repair mechanisms through PARP activation and maintains genomic stability under oxidative stress conditions</li><li>Declines significantly with age across multiple tissues, with restoration improving metabolic function and stress resistance in aging models</li></ul>
 <h2>Research Applications</h2>
 <ul><li>Redox biochemistry</li><li>Sirtuin activation research</li><li>Cellular energy metabolism</li><li>PARP enzyme function</li><li>Mitochondrial studies</li><li>NAD+/NADH ratio measurement</li><li>Cellular aging mechanisms</li><li>DNA repair pathways</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +127,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0"><h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3><ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem"><li>Yoshino J, Baur JA, Imai SI. NAD+ intermediates: the biology and therapeutic potential of NMN and NR. Cell Metab. 2018;27(3):513-28. PMID: 29249689</li></ol></div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
