--- a/products/vitamin-c-iv.html
+++ b/products/vitamin-c-iv.html
@@ -73,7 +73,7 @@
 <tr><td>Form</td><td>Solution</td></tr>
 <tr><td>Quantity</td><td>10mg/20ml</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
-<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
+<tr><td>Sequence</td><td>L-ascorbic acid (C6H8O6) — 2-oxo-L-threo-hexono-1,4-lactone</td></tr>
 <tr><td>CAS Number</td><td>50-81-7</td></tr>
 <tr><td>Molecular Weight</td><td>176.1 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>6</sub>H<sub>8</sub>O<sub>6</sub></td></tr>
@@ -97,8 +97,11 @@
 </div>
 <h2>What is Vitamin C IV?</h2>
 <p>L-Ascorbic acid (vitamin C) serves multiple critical biochemical roles beyond its well-known antioxidant function. As a cofactor for prolyl and lysyl hydroxylases, ascorbate is absolutely required for collagen triple helix stability—without adequate vitamin C, collagen synthesis fails, manifesting as scurvy. The vitamin also serves as cofactor for dopamine β-hydroxylase (converting dopamine to norepinephrine) and other copper-containing monooxygenases essential for neurotransmitter synthesis.</p><p>As an antioxidant, ascorbate directly reduces reactive oxygen species and serves as the first line of defense in aqueous environments. It functions synergistically with vitamin E by reducing tocopheroxyl radicals back to active tocopherol, linking water-soluble and lipid-soluble antioxidant systems. This pharmaceutical-grade injectable preparation enables precise dosing in controlled research applications.</p>
-{{MECHANISM_SECTION}}
-{{KEY_FINDINGS_SECTION}}
+<h2>Mechanism of Action</h2>
+<p>At physiological concentrations achieved through oral administration, ascorbic acid functions as an essential cofactor for enzymatic reactions including collagen synthesis (prolyl and lysyl hydroxylases), carnitine biosynthesis, and catecholamine metabolism. However, intravenous administration achieves plasma concentrations 30-70-fold higher than oral dosing, fundamentally changing the molecule's biological activity. At these pharmacological concentrations, ascorbate acts as a pro-oxidant in the presence of transition metals, generating hydrogen peroxide through Fenton chemistry—a mechanism distinct from its antioxidant role at physiological levels.</p>
+<p>This concentration-dependent shift from antioxidant to pro-oxidant creates selective cytotoxicity toward cancer cells while sparing normal cells. Cancer cells accumulate more ascorbate through upregulated GLUT1 transporters, have higher levels of redox-active iron, and possess lower catalase activity to decompose the resulting hydrogen peroxide. The generated H₂O₂ damages cancer cell membranes, proteins, and DNA. This pharmacokinetic distinction—where route of administration determines mechanism of action—makes high-dose intravenous ascorbate a unique research tool for studying redox biology, differential cellular responses to oxidative stress, and metabolic vulnerabilities in cancer cells.</p>
+<h2>Key Research Findings</h2>
+<ul><li>Achieves pharmacological plasma concentrations (millimolar range) through intravenous administration that produce pro-oxidant effects distinct from oral dosing's antioxidant mechanisms (Padayatty et al. Ann Intern Med 2004;140(7):533-7. PMID: 15068981)</li><li>Generates hydrogen peroxide through Fenton chemistry at high concentrations, creating selective cytotoxicity toward cells with impaired antioxidant defenses</li><li>Demonstrates differential uptake and toxicity profiles between normal and cancer cells based on GLUT transporter expression, redox-active iron levels, and catalase activity</li></ul>
 <h2>Research Applications</h2>
 <ul><li>Collagen hydroxylation research</li><li>Ascorbate-dependent enzyme studies</li><li>Antioxidant mechanism research</li><li>Iron metabolism</li><li>Neurotransmitter synthesis pathways</li><li>Immune cell function studies</li><li>Vitamin C-dependent biochemistry</li></ul>
 <h2>Reconstitution & Use</h2>
@@ -124,7 +127,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
-{{REFERENCES_SECTION}}
+<div class="references" style="margin:2rem 0;padding-top:1rem;border-top:1px solid #E2E8F0"><h3 style="font-size:0.95rem;color:#475569;margin-bottom:0.75rem">References</h3><ol style="font-size:0.8rem;color:#64748B;line-height:1.8;padding-left:1.5rem"><li>Padayatty SJ, Sun H, Wang Y, et al. Vitamin C pharmacokinetics: implications for oral and intravenous use. Ann Intern Med. 2004;140(7):533-7. PMID: 15068981</li></ol></div>
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
